--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ข้อมูลการขายสินค้า</h1>
+    <h1>ข้อมูลการขายสินค้า200รายการ</h1>
 </body>
 </html>
